--- a/Source/Web365Admin/Web.config
+++ b/Source/Web365Admin/Web.config
@@ -48,6 +48,18 @@
     <add key="elmah.mvc.allowedUsers" value="*" />
     <add key="elmah.mvc.route" value="elmah" />
     <add key="elmah.mvc.UserAuthCaseSensitive" value="true" />
+	  <!--Phuong tao fix ID lay Tính Năng Định Vị & Phân Loại Vượt Trội ngay 05/08/2021-->
+	  <add key="tinhnangdinhvivaphanloaivuottroi" value="63"/>
+	  <!--Phuong tao fix ID lay Tính Năng Định Vị & Phân Loại Vượt Trội ngay 05/08/2021-->
+	  <!--Phuong tao fix ID lay tải ứng dụng ngay 05/08/2021-->
+	  <add key="taiungdung" value="67"/>
+	  <!--Phuong tao fix ID lay tải ứng dụng ngay 05/08/2021-->
+	  <!--Phuong tao fix ID Về chúng tôi ngay 05/08/2021-->
+	  <add key="vechungtoi" value="75"/>
+	  <!--Phuong tao fix ID Về chúng tôi ngay 05/08/2021-->
+	  <!--Phuong tao fix ID Manhinhapp ngay 05/08/2021-->
+	  <add key="Manhinhapp" value="73"/>
+	  <!--Phuong tao fix ID Manhinhapp ngay 05/08/2021-->
   </appSettings>
   <system.web>
     <globalization culture="vi-vn" uiCulture="vi-vn" />
