--- a/Source/Web365/Web365.csproj
+++ b/Source/Web365/Web365.csproj
@@ -307,16 +307,20 @@
     <Content Include="Content\GStoreWeb\images\img\images\banner-app-mobile-g-store-nong-san-mua-dich-370x280.jpg" />
     <Content Include="Content\GStoreWeb\images\img\images\banner-blog.jpeg" />
     <Content Include="Content\GStoreWeb\images\img\images\banner-cut.png" />
+    <Content Include="Content\GStoreWeb\images\img\images\banner-G-Store.jpg" />
     <Content Include="Content\GStoreWeb\images\img\images\banner.jpeg" />
     <Content Include="Content\GStoreWeb\images\img\images\banner.jpg" />
     <Content Include="Content\GStoreWeb\images\img\images\blog-1.jpeg" />
     <Content Include="Content\GStoreWeb\images\img\images\buoc5.jpg" />
+    <Content Include="Content\GStoreWeb\images\img\images\Close.png" />
     <Content Include="Content\GStoreWeb\images\img\images\danhgia.png" />
     <Content Include="Content\GStoreWeb\images\img\images\dexuat.png" />
     <Content Include="Content\GStoreWeb\images\img\images\facebook2.png" />
     <Content Include="Content\GStoreWeb\images\img\images\facebook3.png" />
     <Content Include="Content\GStoreWeb\images\img\images\features_icon_s.png" />
     <Content Include="Content\GStoreWeb\images\img\images\g-store-1-999.jpg" />
+    <Content Include="Content\GStoreWeb\images\img\images\G-Store-Banner1.jpg" />
+    <Content Include="Content\GStoreWeb\images\img\images\icons8-close-window-96.png" />
     <Content Include="Content\GStoreWeb\images\img\images\imagecompressor\1-min.PNG" />
     <Content Include="Content\GStoreWeb\images\img\images\imagecompressor\10-min.PNG" />
     <Content Include="Content\GStoreWeb\images\img\images\imagecompressor\11-min.PNG" />
