--- a/Source/Web365Admin/Web.config
+++ b/Source/Web365Admin/Web.config
@@ -52,6 +52,8 @@
 	  <add key="tinhnangdinhvivaphanloaivuottroi" value="63"/>
 	  <!--Phuong tao fix ID lay Ungdung ngay 05/08/2021-->
 	  <add key="Ungdung" value="1767"/>
+	  <!--Phuong tao fix ID lay Ungdung ngay 05/08/2021-->
+	  <add key="Gioithieucongty" value="1777"/>
 	  <!--Phuong tao fix ID lay Gioithieuapp ngay 05/08/2021-->
 	  <add key="Gioithieuapp" value="1741"/>
 	  <!--Phuong tao fix ID lay tải ứng dụng ngay 05/08/2021-->
